Fix: Explicitly enable CORS in Spring Security for preflight requests